src/assets/scss/variables.scss
$brand: #20a0ff;

$white: #ffffff;
$black: #000000;
$grey: #f7f8f9;
$red: #fa0101;
$green: #ffff00;
$jade: #34dfa5;

$white-grey: #F4F6FA;
$silver-grey: #707780;
$black-grey: #464547;
$dropdown-grey: #606266;

$common-link: #48576a;
$common-link-hover: #263238;

$link-title: #000000;
$link-title-hover: $jade;

$border-grey: #d1d5da;
$border-black: #7a8ba9;

$footer-grey: #969696;
$footer-grey-bg: #eaeaea;

$entry-btn-grey: #97a8be;
$entry-btn-hover: #333333;

$moudle-border-color: #d1d5da;
$item-border-color: #e4e7ed;

//----------------------- font size -----------------------
$font-large: 18px;
$font-medium: 16px;
$font-small: 14px;

//----------------------- $z-index ------------------------
$zindex-subhead: 100;
$zindex-mobile-search: 1000;
$zindex-side-nav: 2000;
$zindex-upload-avatar: 10000;
$zindex-quickapp-btn: 99999;

//--------------------- width height ----------------------
$mobile-screen: 960px;
$large-screen: 1335px;
$small-mobile-screen: 375px;
$tiny-mobile-screen: 320px;
$side-nav-width: 100%;

$header-height: 80px;
$header-mobile-height: 60px;

$footer-height: 200px;
$section-height: 32rem;
$crescent-height: 10rem;

